--- a/02-counter/src/App.css
+++ b/02-counter/src/App.css
@@ -29,3 +29,12 @@ html {
 .logo {
   height: 200px;
 }
+
+.contenedorMain {
+  height: 550px;
+  min-width: 650px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+}
