--- a/03-calculadora/src/App.css
+++ b/03-calculadora/src/App.css
@@ -40,3 +40,11 @@
 .read-the-docs {
   color: #888;
 }
+
+.calculadoraContainer {
+  width: 600px;
+  height: 400px;
+  padding: 14px;
+  background-color: #fff;
+  border-radius: 5px;
+}
